<resources>
    <string name="app_name">SuppliFy</string>
    <string name="login">Login</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="registration">Sign up</string>
    <string name="username">Username</string>
    <string name="email_registration">E-mail address*</string>
    <string name="password_registration">Password*</string>
    <string name="passwordAgain">Password again*</string>
    <string name="mobile">Mobile</string>
    <string name="choose_occupation">Choose occupation</string>
    <string name="postal_address">Postal address</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="add_to_cart_button_description">Add to cart</string>
    <string name="remove_from_cart_button_description">Remove from cart</string>
    <string name="product_name">Product Name</string>
    <string name="price_10_99">Price: $10.99</string>
    <string name="picture_of_the_product">Picture of the product</string>
    <string name="search">Search</string>
    <string name="reload">Reload</string>
    <string name="you_have_no_internet_access">You have no internet access.</string>
    <string-array name="occupation">
        <item>Employed</item>
        <item>Student</item>
        <item>Retired</item>
        <item>Other</item>
    </string-array>

    <string-array name="product_images">
        <item>@drawable/bcaa</item>
        <item>@drawable/creatine</item>
        <item>@drawable/omega</item>
        <item>@drawable/pump</item>
        <item>@drawable/vitamins</item>
        <item>@drawable/whey</item>
        <item>@drawable/chips</item>
        <item>@drawable/cream</item>
        <item>@drawable/iso</item>
        <item>@drawable/muscle</item>
    </string-array>

    <string-array name="product_names">
        <item>BCAA 200g</item>
        <item>Creatine Monohydrate 1kg</item>
        <item>Omega 3</item>
        <item>Pump Pre-workout 330g</item>
        <item>Daily Vitamin Pack</item>
        <item>Pure Whey 1kg</item>
        <item>Protein chips - Chili flavoured</item>
        <item>Protein Cream</item>
        <item>ISO Whey Zero 500g</item>
        <item>Muscle Mass 4800g</item>
    </string-array>

    <string-array name="product_rates">
        <item>3.5</item>
        <item>5.0</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>4.5</item>
        <item>4.0</item>
        <item>5.0</item>
        <item>4.0</item>
    </string-array>

    <string-array name="product_prices">
        <item>3 990</item>
        <item>15 890</item>
        <item>590</item>
        <item>5 990</item>
        <item>4 530</item>
        <item>8 990</item>
        <item>780</item>
        <item>3 490</item>
        <item>11 190</item>
        <item>24 090</item>
    </string-array>
</resources>