<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        tools:ignore="RtlHardcoded"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/picture_of_the_product" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/product_image"
                android:text="@string/product_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/product_image"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_bar"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/product_image"
                android:text="@string/price_10_99"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_to_cart_relative_layout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/add_to_cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/add_shopping_cart"
                android:text=""
                android:textSize="16sp"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                tools:ignore="RtlSymmetry"
                android:contentDescription="@string/add_to_cart_button_description"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>